# rtqc

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.md  ToDo.md  testing.R
R/: ToDo.md  angenieux.R  app.R  basecalled_folder.R  bundled_data.R  extendr-wrappers.R  general_methods.R  harvester.R  infographic.R  sequence_set.R  sequence_set_summary.R
man/: Angenieux.Rd  AngenieuxDecoration.Rd  Infographic.Rd  InfographicItem.Rd  basecalled_folder.Rd  form_arrow.Rd  get_arrow_path.Rd  get_bundled_path.Rd  get_indexed_tuples.Rd  get_mean_qscore.Rd  get_qscore.Rd  index_fastq.Rd  index_fastq_list.Rd  n50calc.Rd  sequence_set.Rd  sequence_set_summary.Rd
src/: Makevars  Makevars.win  entrypoint.c  rtqc-win.def
src/rust/: Cargo.toml
src/rust/src/: arrow.rs  fastq.rs  filehandlers.rs  fq_threaded.rs  lib.rs
vignettes/: 01_sequence_folders.Rmd  02_the_sequencing_set.Rmd  03_sequence_set_summaries.Rmd
