[package]
name = 'rtqc'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'rtqc'

[dependencies]
extendr-api = '*'
#fastq = { git = "https://github.com/sagrudd/fastq-rs.git" }
#fastq = '0.6.0'
fastq = { path = "/Users/stephen.rudd/Documents/github_sagrudd/fastq-rs/" }
polars = {version = '0.30.0', features = ["polars-io"] }
polars-io = { version = "0.30.0", features = ["parquet"] }
temp_file_name = '0.1.0'
async-std = '1.12.0'
file-lock = '2.1.9'